--- a/index.html
+++ b/index.html
@@ -5,43 +5,299 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Housing - Bootcamp 10 -Thái Duy Khang</title>
-    <link rel="stylesheet" href="./js/slick/slick.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <link rel="stylesheet" href="./js/slick/slick-theme.css"/>
+    <link rel="stylesheet" href="./js/slick/slick.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="./style/style.css"/>
 </head>
 <body>
-    <header></header>
+    <header>
+        <div class="logo">
+            <h1><a href="/">Hous<span>ing</span></a></h1>
+        </div>
+        <navbar class="navbar">
+            <a class="active" href="#">Home</a>
+            <a href="#about">About</a>
+            <a href="#blog">Blog</a>
+            <a href="#portfolio">Portfoilo</a>
+            <a href="#agent">Agents</a>
+            <a href="#contact">Contact</a>
+        </navbar>
+    </header>
     <section class="carousel">
         <div class="items">
-            <h1>Lorem ipsum dolor sit amet.</h1>
-            <p>Lorem ipsum dolor sit amet.</p>
-            <img src="./img/b1.jpg"/>
+            <div class="content">
+                <h1>title slide 1</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit, consequuntur!</p>              
+            </div>
+            <img src="img/b1.jpg"/>
         </div>
         <div class="items">
-            <h1>Lorem ipsum dolor sit amet.</h1>
-            <p>Lorem ipsum dolor sit amet.</p>
-            <img src="./img/b2.jpg"/>
+            <div class="content">
+                <h1>title slide 2</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit, consequuntur!</p>              
+            </div>
+            <img src="img/b2.jpg"/>
         </div>
         <div class="items">
-            <h1>Lorem ipsum dolor sit amet.</h1>
-            <p>Lorem ipsum dolor sit amet.</p>
-            <img src="./img/b3.jpg"/>
+            <div class="content">
+                <h1>title slide 3</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit, consequuntur!</p>              
+            </div>
+            <img src="img/b3.jpg"/>
         </div>
         <div class="items">
-            <h1>Lorem ipsum dolor sit amet.</h1>
-            <p>Lorem ipsum dolor sit amet.</p>
-            <img src="./img/b4.jpg"/>
+            <div class="content">
+                <h1>title slide 4</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit, consequuntur!</p>              
+            </div>
+            <img src="img/b4.jpg"/>
         </div>
     </section>
-    <section class="about"></section>
-    <section class="stat"></section>
-    <section class="blog"></section>
-    <section class="video"></section>
-    <section class="portfolio"></section>
-    <section class="Subscribe"></section>
-    <section class="agent"></section>
-    <section class="contact"></section>
-    <footer></footer>
+    <section class="about" id="about">
+        <h1>About</h1>
+        <div class="list">
+            <div class="item">
+                <i class="fas fa-home"></i>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do labore et dolore magna aliqua.</p>
+            </div>
+            <div class="item">
+                <i class="fas fa-key"></i>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do labore et dolore magna aliqua.</p>
+            </div>
+            <div class="item">
+                <i class="far fa-money-bill-alt"></i>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do labore et dolore magna aliqua.</p>
+            </div>
+        </div>
+        <div class="about-us">
+            <h1>About Us</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sed odio consequat, tristique elit sed, molestie nulla. Mauris et quam leo. Quisque tincidunt facilisis rutrum. Etiam mattis arcu vitae velit sagittis vehicula. Duis posuere ex in mollis iaculis. Suspendisse tincidunt ut velit id euismod.vulputate turpis porta ex sodales, dignissim hendrerit eros sagittis. Curabitur lacinia dui ut luctus congue. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras quis</p>
+        </div>
+    </section>
+    <section class="stats" id="stats">
+        <h1>Stats</h1>
+        <div class="list">
+            <div class="item">
+                <h1>3500</h1>
+                <p>Clients</p>
+            </div>
+            <div class="item">
+                <h1>650</h1>
+                <p>Plans</p>
+            </div>
+            <div class="item">
+                <h1>1021</h1>
+                <p>Projects</p>
+            </div>
+            <div class="item">
+                <h1>1010</h1>
+                <p>Likes</p>
+            </div>
+        </div>
+    </section>
+    <section class="blog" id="blog">
+        <h1>Blog</h1>
+        <div class="list">
+            <div class="item">
+                <div class="content">
+                    <img src="img/g1.jpg">
+                    <div class="excerpt">
+                        <h1>Lorem ipsum dolor sit amet.</h1>
+                        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium</p>
+                        <button class="readmore">Read more..</button>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <div class="content">
+                    <img src="img/g2.jpg">
+                    <div class="excerpt">
+                        <h1>Lorem ipsum dolor sit amet.</h1>
+                        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium</p>
+                        <button class="readmore">Read more..</button>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <div class="content">
+                    <img src="img/g1.jpg">
+                    <div class="excerpt">
+                        <h1>Lorem ipsum dolor sit amet.</h1>
+                        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium</p>
+                        <button class="readmore">Read more..</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="get-more">
+        <div class="video">
+            <button><i class="fa fa-play-circle"></i></button>
+        </div>
+        <div class="content">
+            <h1>Get More..</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut minim veniam, labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur.</p>
+            <button class="readmore">Read more..</button>
+        </div>
+    </section>
+    <section class="portfolio" id="portfolio">
+        <h1>Portfolio</h1>
+        <div class="container">
+            <div class="item">
+                <a href="#"><img src="img/img1.jpg"></a>
+                <div class="content-wrap animate__animted animate__fadeIn">
+                    <div class="content">
+                        <h1>GALLERY</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <a href="#"><img src="img/img2.jpg"></a>
+                <div class="content-wrap">
+                    <div class="content">
+                        <h1>GALLERY</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <a href="#"><img src="img/img3.jpg"></a>
+                <div class="content-wrap">
+                    <div class="content">
+                        <h1>GALLERY</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <a href="#"><img src="img/img4.jpg"></a>
+                <div class="content-wrap">
+                    <div class="content">
+                        <h1>GALLERY</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <a href="#"><img src="img/img5.jpg"></a>
+                <div class="content-wrap">
+                    <div class="content">
+                        <h1>GALLERY</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <a href="#"><img src="img/img6.jpg"></a>
+                <div class="content-wrap">
+                    <div class="content">
+                        <h1>GALLERY</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="subscribe">
+        <div class="content">
+            <h1>Subscribe</h1>
+            <p>consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi</p>
+            <input type="email" name="email" placeholder="Email" required>
+        </div>
+        <button>Click</button>
+    </section>
+    <section class="agent" id="agent">
+        <h1>Our Agents</h1>
+            <div class="list">
+                <div class="item">
+                    <img src="./img/t1.jpg">
+                    <div class="content">
+                        <h1>KAT WALLY</h1>
+                        <p>Lorem ipsum</p>
+                        <div class="social">
+                            <i class="fab fa-facebook-f"></i>                            
+                            <i class="fab fa-twitter"></i>
+                            <i class="fas fa-rss"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="./img/t4.jpg">
+                    <div class="content">
+                        <h1>JOHN MAX</h1>
+                        <p>Lorem ipsum</p>
+                        <div class="social">
+                            <i class="fab fa-facebook-f"></i>                            
+                            <i class="fab fa-twitter"></i>
+                            <i class="fas fa-rss"></i>
+                          </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="./img/t2.jpg">
+                    <div class="content">
+                        <h1>ROY KENT</h1>
+                        <p>Lorem ipsum</p>
+                        <div class="social">
+                            <i class="fab fa-facebook-f"></i>                            
+                            <i class="fab fa-twitter"></i>
+                            <i class="fas fa-rss"></i>
+                          </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="./img/t3.jpg">
+                    <div class="content">
+                        <h1>JOY IDSON</h1>
+                        <p>Lorem ipsum</p>
+                        <div class="social">
+                            <i class="fab fa-facebook-f"></i>                            
+                            <i class="fab fa-twitter"></i>
+                            <i class="fas fa-rss"></i>
+                          </div>
+                    </div>
+                </div>
+            </div>
+    </section>
+    <section class="map" id="map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3918.907207912903!2d106.69753941480117!3d10.818412892293065!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x317529226bd795d5%3A0xe1e4babb703c668a!2zVHLDtG5nIEdp4buvIENow7MgTcOobyBIQ00!5e0!3m2!1sen!2s!4v1618481968649!5m2!1sen!2s" 
+            width="100%" 
+            height="450" 
+            style="border:0;" 
+            allowfullscreen="" 
+            loading="lazy"></iframe>
+    </section>
+    <section class="contact">    
+            <h1> Contact Us</h1>
+            <div class="form">
+                <div class="col-left">
+                    <input type="text" name="name" placeholder="Name">
+                    <input type="text" name="lastname" placeholder="Last Name">
+                    <input type="email" name="email" placeholder="Email">
+                    <input type="text" name="phone" placeholder="Phone">
+                </div>
+                <div class="col-right">
+                    <textarea type="textarea" name="message" placeholder="Message" height="400"></textarea>
+                    <button type="submit">Submit</button>
+                </div>
+            </div>
+    </section>
+    <footer>
+        <div class="container">
+            <p>© 2021 Bootcamp 10. All Rights Reserved | Clone by <a href="#">Thái Duy Khang</a></a></p>
+            <div class="social">
+                <i class="fab fa-facebook-f"></i>                            
+                <i class="fab fa-twitter"></i>
+                <i class="fas fa-rss"></i>
+            </div>
+        </div>
+        <div class="bottom-to-top">
+            <a href="#"><img src="img/arrowup.png"></a>
+        </div>
+    </footer>
 
 
     
@@ -56,9 +312,10 @@
       $(".carousel").slick({
         arrows: true,
         dots: true,
-        infinite: true,
+        fade: true,
+        cssEase: 'linear',
         autoplay: true,
-        autoplaySpeed: 3000,
+        autoplayspeed: 4000,
         slidesToShow: 1,
         slidesToScroll: 1
       });
