--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
             allowfullscreen="" 
             loading="lazy"></iframe>
     </section>
-    <section class="contact">    
+    <section class="contact" id="contact">    
             <h1> Contact Us</h1>
             <div class="form">
                 <div class="col-left">
